<resources>
    <string name="app_name">Book of recipes</string>
    <string name="favorites_screen">Favorites</string>
    <string name="settings_screen">Settings</string>
    <string name="home_screen">Recipes</string>
    <string name="main_menu_title">Recipes for you</string>
    <string name="main_menu_add_button" translatable="false">+</string>
    <string name="autor_list_title">Have been working on the application:</string>
    <string name="paolalenti" translatable="false">\@paolalenti</string>
    <string name="github_paolalenti" translatable="false">github:paolalenti</string>
    <string name="teruuj1" translatable="false">\@teruuj1</string>
    <string name="github_teruuj1" translatable="false">github:teruuj1</string>
    <string name="yaroslav_tech" translatable="false">\@yaroslav_tech</string>
    <string name="github_k4li_0x0" translatable="false">github:k4li-0x0</string>
    <string name="website_k4li_ru" translatable="false">website:k4li.ru</string>
    <string name="ejfjdkd" translatable="false">\@Ejfjdkd</string>
    <string name="github_aliyakad" translatable="false">github:AliyaKad</string>
    <string name="editor_recipe_name">Recipe name</string>
    <string name="editor_recipe_time">Time to cook</string>
    <string name="editor_create_recipe">Create</string>
    <string name="editor_ingredients_label">Ingredients</string>
    <string name="editor_steps_label">Steps</string>
    <string name="editor_recipe_description">Description</string>
    <string name="editor_ingredient">Ingredient</string>
    <string name="editor_ingredient_quantity">Quantity</string>
    <string name="editor_delete_ingredient">Delete ingredient</string>
    <string name="editor_add_ingredient">Add ingredient</string>
    <string name="editor_drag_indicator">Drag indicator</string>
    <string name="editor_add_step">Add step</string>
    <string name="editor_step_number_format" translatable="false">%1$d.</string>
    <string name="editor_empty_step_error">Step\'s description can\'t be empty!</string>
    <string name="editor_name_error">Recipe\'s name can\'t be empty!</string>
    <string name="editor_empty_ingredient_error">Ingredient can\'t has empty name</string>
    <string name="description_fab_star">add to favorites</string>
    <string name="authorsFragment">Authors</string>
    <string name="info_quantity_format" translatable="false">%1$s %2$s</string>
    <string name="editor_recipe_image">Image URL</string>
</resources>