<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autor_list_title"
        android:fontFamily="@font/calibri_bold"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/autor1"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintVertical_bias="0.2"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paolalenti"
        android:fontFamily="@font/link"
        android:textSize="24sp"
        android:textColor="@color/orange_color"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/imageView1"
        app:layout_constraintTop_toTopOf="@id/imageView1"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_paolalenti"
        android:textColor="@color/dark_orange"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/imageView1"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        android:layout_marginTop="4dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/autor2"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView1"
        android:scaleType="centerCrop"
        app:layout_constraintVertical_bias="1.0"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teruuj1"
        android:fontFamily="@font/link"
        android:textColor="@color/orange_color"
        android:textSize="24sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@id/imageView2"
        app:layout_constraintTop_toTopOf="@id/imageView2"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_teruuj1"
        android:textColor="@color/dark_orange"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        android:layout_marginTop="4dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/autor3"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yaroslav_tech"
        android:fontFamily="@font/link"
        android:textColor="@color/orange_color"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/imageView3"
        app:layout_constraintTop_toTopOf="@id/imageView3"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_k4li_0x0"
        android:textColor="@color/dark_orange"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website_k4li_ru"
        android:textColor="@color/dark_orange"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/imageView3"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        android:layout_marginTop="4dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/autor4"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejfjdkd"
        android:fontFamily="@font/link"
        android:textColor="@color/orange_color"
        android:textSize="24sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@id/imageView4"
        app:layout_constraintTop_toTopOf="@id/imageView4"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_aliyakad"
        android:textColor="@color/dark_orange"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@id/textView8"
        android:layout_marginTop="4dp" />
</androidx.constraintlayout.widget.ConstraintLayout>