<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEditorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:context=".fragments.RecipeEditorFragment">

        <EditText
            android:id="@+id/et_recipe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/editor_recipe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_recipe_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/editor_recipe_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_recipe_name"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_recipe_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@string/editor_recipe_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_recipe_time"
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/tv_ingredients_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/editor_ingredients_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_recipe_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ingredients_label"
            tools:listitem="@layout/item_editor_ingredient" />

        <TextView
            android:id="@+id/tv_steps_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/editor_steps_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_ingredients" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_steps_label" />

        <Button
            android:id="@+id/bt_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_create_recipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_steps" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>