<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <AutoCompleteTextView
        android:id="@+id/tv_ingredient_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/editor_ingredient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_ingredient_quantity"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_ingredient_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:inputType="text"
        android:text="@string/editor_ingredient_quantity"
        app:layout_constraintStart_toEndOf="@+id/tv_ingredient_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_delete"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/bt_delete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/editor_delete_ingredient"
        android:src="@drawable/baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_ingredient_quantity"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>